<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/icon_house"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_cart"
            android:icon="@drawable/icon_shopping_cart"
            android:actionLayout="@layout/cart_badge"
            android:title="@string/title_cart"/>

    <item
            android:id="@+id/navigation_categories"
            android:icon="@drawable/icon_dashboard"
            android:iconTint="@color/colorWhite"
            android:titleCondensed="@string/title_categories"
            android:title="@string/title_categories"/>
    <item
            android:id="@+id/navigation_my_account"
            android:icon="@drawable/icon_user_image"
            android:title="@string/title_my_account"/>

</menu>
