<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.fragments.FragmentHome"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/top_background">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/image_view_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp" />
            <ImageView
                    android:id="@+id/image_view_back"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/icon_back" />
        </RelativeLayout>
        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:text="@string/payment"
            style="@style/tengesa_header"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2"
        android:paddingTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/spinner_background"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_summary"
                android:textSize="18dp"
                android:textStyle="bold"
                    android:layout_marginBottom="3dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:layout_marginBottom="3dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_total"
                    android:layout_weight="2"
                    android:textStyle="bold"/>
                <TextView
                        android:id="@+id/text_view_sub_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:layout_marginBottom="3dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/shipping"
                    android:layout_weight="2"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/text_view_shipping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear_layout_extra_shipping"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:visibility="gone"
                android:layout_marginBottom="3dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extra_shipping"
                    android:layout_weight="2"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/text_view_extra_shipping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:layout_marginBottom="3dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:layout_weight="2"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/text_view_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>
            </LinearLayout>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ship To:"
                android:textSize="22sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/text_view_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"/>
            <TextView
                android:id="@+id/text_view_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"/>
            
        </LinearLayout>
        <Button
            android:id="@+id/button_place_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorWhite"
            android:text="@string/place_order"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:enabled="false"
            android:background="@drawable/button_less_curved"/>
    
    </LinearLayout>
</LinearLayout>